tests/syntax-error/syntax-error/syntax-error-tests.factor
USING: exercism-tools syntax-error tools.test ;
IN: syntax-error.tests

{ "hello" } [ greet ] unit-test
